images fixes + css updates

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>3D Design Diffusion</title>
+    <title>3D DESIGN DIFFUSION</title>
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
@@ -23,7 +23,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container px-4 px-lg-5">
-            <a class="navbar-brand" href="#page-top">3D Design Diffusion</a>
+            <a class="navbar-brand" href="#page-top">3D DESIGN DIFFUSION</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -44,8 +44,7 @@
         <div class="container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center">
             <div class="d-flex justify-content-center">
                 <div class="text-center">
-                    <h1 class="mx-auto my-0 text-uppercase invert"><img width="600px" height="600px"
-                            src="assets/fin_entier.png"></h1>
+                    <h1 class="mx-auto my-0 text-uppercase invert"><img class="logo-main" src="assets/fin_entier.png"></h1>
                     </h1>
                     <!-- <h2 class="text-white-50 mx-auto mt-2 mb-5">A free, responsive, one page Bootstrap theme created by
                         Start Bootstrap.</h2>
@@ -58,16 +57,16 @@
     <section class="about-section text-center" id="about">
         <div class="container px-4 px-lg-5">
             <div class="row gx-4 gx-lg-5 justify-content-center">
-                <div class="col-lg-8">
-                    <h2 class="text-white mb-4">3D Design: Décoration & Diffusion</h2>
-                    <p class="text-white-50">
-                        Notre société familiale est née en 1992 de la passion pour le design de Gérard Gateau.<br><br>
-                        Depuis, l’agence commerciale s’est structurée au niveau national. Elle propose une sélection globale et complémentaire de marques de mobilier contemporain.<br><br>
+                <div class="col-lg-6">
+                    <!-- <h2 class="text-white mb-4">3D Design: Décoration & Diffusion</h2> -->
+                    <p class="text-white-50 mb-4">
+                        Notre société familiale est née en 1992 de la passion de Gérard Gateau pour le design et la décoration intérieure.<br><br>
+                        Depuis, l’agence commerciale s’est développée et structurée au niveau national. Elle propose une sélection globale et complémentaire de marques de mobilier contemporain.<br><br>
                         Notre équipe vous accompagne dans tous vos projets et vous offre des solutions d’aménagement dans les secteurs de l’habitat, du contract et de l’hôtellerie-restauration.<br><br>
                     </p>
                 </div>
             </div>
-            <!-- <img class="img-fluid" src="assets/img/logo-white/ipad.png" alt="..." /> -->
+                <!-- <img class="img-fluid" src="" alt="..." /> -->
         </div>
     </section>
     <!-- Projects-->
@@ -80,7 +79,7 @@
                 <div class="col-xl-4 col-lg-5">
                     <div class="featured-text text-center text-lg-left">
                         <h4>Nos marques</h4>
-                        <p class="text-black-50 mb-0">Nous mettons la relation entre nos clients et nos fournisseurs au centre de nos priorités. Le sens du service, la proximité et la réactivité de nos marques les critères immuables de sélection de nos partenaires, afin de vous accompagner sereinement dans tous vos projets.</p>
+                        <p class="text-black-60 mb-0">La relation entre nos clients et nos fournisseurs est au centre de nos priorités. Nous sélectionnons avec attention nos partenaires afin de vous accompagner sereinement dans tous vos projets.</p>
                     </div>
                 </div>
             </div>
@@ -92,7 +91,7 @@
                         <div class="d-flex h-100">
                             <div class="project-text w-100 my-auto text-center text-lg-right">
                                 <a class="brand-logos" href="https://www.bdbarcelona.com/" target="_blank"><img class="img-brands-logos" src="assets/img/logo-black/bdbarcelona.png" alt="logo-bdbarcelona"  /></a>
-                                <p class="mb-0 text-white-50">BD Barcelona – La rencontre de l’art et du design –<br>La marque associe les processus artisanaux aux techniques industrielles de pointe pour offrir des pièces d’exception signées par les plus grands designers.</p>
+                                <p class="mb-0 text-white-50">BD Barcelona<br> – La rencontre de l’art et du design –<br>La marque associe les processus artisanaux aux techniques industrielles de pointe pour offrir des pièces d’exception signées par les plus grands designers.</p>
                                 <hr class="d-none d-lg-block mb-0 me-0" />
                             </div>
                         </div>
@@ -108,7 +107,7 @@
                             <div class="project-text w-100 my-auto text-center text-lg-left">
                                 <a class="brand-logos" href="https://www.bontempi.it/it_fr/" target="_blank"><img class="img-brands-logos" src="assets/img/logo-black/bontempi.png" alt="logo-bontempi"  /></a>
                                 <p class="mb-0 text-white-50">L’entreprise familiale Italienne se distingue par une recherche obsessionnelle de la qualité guidée par la passion.
-                                    Elle offre une gamme complète pour l’habitat et des solutions pour le secteur contract alliant beauté, fonctionnalité et confort..</p>
+                                    Elle offre une gamme complète pour l’habitat et des solutions pour le secteur contract alliant beauté, fonctionnalité et confort.</p>
                                 <hr class="d-none d-lg-block mb-0 ms-0" />
                             </div>
                         </div>
@@ -123,38 +122,8 @@
                         <div class="d-flex h-100">
                             <div class="project-text w-100 my-auto text-center text-lg-right">
                                 <a class="brand-logos" href="https://www.bontempi.it/it_fr/" target="_blank"><img class="img-brands-logos" src="assets/img/logo-black/bivaq.png" alt="logo-bivaq"  /></a>
-                                <p class="mb-0 text-white-50">Les collections outdoor Bivaq respectent les plus haut critères de qualité et de confort, dans l’esprit des extérieurs méditerranéens. La marque Barcelonaise développe son activité à la fois sur le marché résidentiel, du contract et de l'hôtellerie, en réalisant des projets avec ses propres conceptions ou des propositions sur mesure..</p>
+                                <p class="mb-0 text-white-50">Les collections outdoor Bivaq respectent les plus haut critères de qualité et de confort, dans l’esprit des extérieurs méditerranéens. La marque Barcelonaise développe son activité à la fois sur le marché résidentiel, du contract et de l'hôtellerie, en réalisant des projets avec ses propres conceptions ou des propositions sur mesure.</p>
                                 <hr class="d-none d-lg-block mb-0 ms-0" />
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- Project Three  Row-->
-            <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
-                <div class="col-lg-6 parent-brand"><img class="img-brands" src="assets/img/arlex-photo.png" alt="Arlex" /></div>
-                <div class="col-lg-6">
-                    <div class="bg-black text-center h-100 project">
-                        <div class="d-flex h-100">
-                            <div class="project-text w-100 my-auto text-center text-lg-left">
-                                <a class="brand-logos" href="https://www.arlex.es/fr/" target="_blank"><img class="img-brands-logos" src="assets/img//logo-black/arlex.png" alt="logo-arlex" /></a>
-                                <p class="mb-0 text-white-50">A la fois performante sur sa gamme standard et les solutions sur mesure, Arlex prend soin de vos espaces de vie et de couchage en accordant une attention particulière aux matières premières et à la fabrication.</p>
-                                <hr class="d-none d-lg-block mb-0 ms-0" />
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- Project Four Row-->
-            <div class="row gx-0 justify-content-center">
-                <div class="col-lg-6 parent-brand"><img class="img-brands" src="assets/img/ingenia-photo.png" alt="Ingenia" /></div>
-                <div class="col-lg-6 order-lg-first">
-                    <div class="bg-black text-center h-100 project">
-                        <div class="d-flex h-100">
-                            <div class="project-text w-100 my-auto text-center text-lg-right">
-                                <a class="brand-logos" href="https://www.bontempi.it/ingenia/" target="_blank" ><img class="img-brands-logos" src="assets/img//logo-black/ingenia.png" alt="logo-ingenia"  /></a>
-                                <p class="mb-0 text-white-50">Ingenia  hérite de l'expérience, de la qualité des produits et des processus du groupe italien Bontempi Casa. Une gamme jeune et fonctionnelle « made in Italy » conçue pour une utilisation indoor ou outdoor.</p>
-                                <hr class="d-none d-lg-block mb-0 me-0" />
                             </div>
                         </div>
                     </div>
@@ -170,6 +139,36 @@
                                 <a class="brand-logos" href="https://www.rosconi.com/fr/" target="_blank"><img class="img-brands-logos" src="assets/img//logo-black/rosconi.png" alt="logo-rosconi"  /></a>
                                 <p class="mb-0 text-white-50">Rosconi – L’experte en solutions globales d'aménagement d'espaces publics et d'environnements de travail. Le mobilier Rosconi combine design sobre et élégant avec un très haut niveau de fonctionnalité.</p>
                                 <hr class="d-none d-lg-block mb-0 ms-0" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Project Five  Row-->
+            <div class="row gx-0 justify-content-center">
+                <div class="col-lg-6 parent-brand"><img class="img-brands" src="assets/img/arlex-photo.png" alt="Arlex" /></div>
+                <div class="col-lg-6 order-lg-first">
+                    <div class="bg-black text-center h-100 project">
+                        <div class="d-flex h-100">
+                            <div class="project-text w-100 my-auto text-center text-lg-right">
+                                <a class="brand-logos" href="https://www.arlex.es/fr/" target="_blank"><img class="img-brands-logos" src="assets/img//logo-black/arlex.png" alt="logo-arlex" /></a>
+                                <p class="mb-0 text-white-50">A la fois performante sur sa gamme standard et les solutions sur mesure, Arlex prend soin de vos espaces de vie et de couchage en accordant une attention particulière aux matières premières et à la fabrication.</p>
+                                <hr class="d-none d-lg-block mb-0 ms-0" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Project Six Row-->
+            <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
+                <div class="col-lg-6 parent-brand"><img class="img-brands" src="assets/img/ingenia-photo.png" alt="Ingenia" /></div>
+                <div class="col-lg-6 ">
+                    <div class="bg-black text-center h-100 project">
+                        <div class="d-flex h-100">
+                            <div class="project-text w-100 my-auto text-center text-lg-left">
+                                <a class="brand-logos" href="https://www.bontempi.it/ingenia/" target="_blank" ><img class="img-brands-logos" src="assets/img//logo-black/ingenia.png" alt="logo-ingenia"  /></a>
+                                <p class="mb-0 text-white-50">Ingenia  hérite de l'expérience, de la qualité des produits et des processus du groupe italien Bontempi Casa. Une gamme jeune et fonctionnelle « made in Italy » conçue pour une utilisation indoor ou outdoor.</p>
+                                <hr class="d-none d-lg-block mb-0 me-0" />
                             </div>
                         </div>
                     </div>
@@ -229,9 +228,9 @@
                     <div class="card py-4 h-100">
                         <div class="card-body text-center">
                             <i class="fas fa-map-marked-alt text-primary mb-2"></i>
-                            <h4 class="text-uppercase m-0">Addresse</h4>
+                            <h4 class="text-uppercase m-0">Adresse</h4>
                             <hr class="my-4 mx-auto" />
-                            <div class="small text-black-50">9 Rue des Tourneurs<br>31000 Toulouse</div>
+                            <div class="text-black-60">9 Rue des Tourneurs<br>31000 Toulouse</div>
                         </div>
                     </div>
                 </div>
@@ -241,7 +240,7 @@
                             <i class="fas fa-envelope text-primary mb-2"></i>
                             <h4 class="text-uppercase m-0">Email</h4>
                             <hr class="my-4 mx-auto" />
-                            <div class="small text-black-50"><a href="#!">3ddesign@wanadoo.fr</a>
+                            <div class="text-black-60"><a href="#!">3ddesign@wanadoo.fr</a>
                             </div>
                         </div>
                     </div>
@@ -252,14 +251,16 @@
                             <i class="fas fa-mobile-alt text-primary mb-2"></i>
                             <h4 class="text-uppercase m-0">Téléphone</h4>
                             <hr class="my-4 mx-auto" />
-                            <div class="small text-black-50">+33 6 78 28 42 85</div>
+                            <div class="text-black-60">+33 6 32 51 94 68</div>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="social d-flex justify-content-center">
-                <a class="mx-2" href="https://www.instagram.com/3ddesigndiffusion/?hl=fr"><i class="fab fa-instagram"></i></a>
-                <a class="mx-2" href="https://www.pinterest.fr/3DDESIGNDIFFUSION/"><i class="fab fa-pinterest"></i></a>
+                <a class="mx-4" href="https://www.instagram.com/3ddesigndiffusion/?hl=fr"><i class="fab fa-instagram fa-3x"></i></a>
+                <a class="mx-4" href="https://www.pinterest.fr/3DDESIGNDIFFUSION/"><i class="fab fa-pinterest fa-3x"></i></a>
+                <a class="mx-4" href="www.linkedin.com/company/3d-design-diffusion/"><i class="fab fa-linkedin fa-3x"></i></a>
+
             </div>
         </div>
     </section>
