image fixes, header

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="#about">Présentation</a></li>
                     <li class="nav-item"><a class="nav-link" href="#projects">Nos marques</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#signup">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -85,7 +85,7 @@
             </div>
             <!-- Project One Row-->
             <div class="row gx-0 justify-content-center">
-                <div class="col-lg-6 parent-brand"><img class="img-brands" src="assets/img/bd-photo.png" alt="BD Barcelona" /></div>
+                <div class="col-lg-6 parent-brand"><img class="img-brands" src="assets/img/bd-photo.jpg" alt="BD Barcelona" style="object-position: left top"/></div>
                 <div class="col-lg-6 order-lg-first">
                     <div class="bg-black text-center h-100 project">
                         <div class="d-flex h-100">
@@ -103,9 +103,9 @@
                 <div class="col-lg-6 parent-brand"><img class="img-brands" src="assets/img/bontempi-photo.png" alt="Bontempi" /></div>
                 <div class="col-lg-6">
                     <div class="bg-black text-center h-100 project">
-                        <div class="d-flex h-100">
-                            <div class="project-text w-100 my-auto text-center text-lg-left">
-                                <a class="brand-logos" href="https://www.bontempi.it/it_fr/" target="_blank"><img class="img-brands-logos" src="assets/img/logo-black/bontempi.png" alt="logo-bontempi"  /></a>
+                        <div class="d-flex h-100" >
+                            <div class="project-text w-100 my-auto text-center text-lg-left" >
+                                <a class="brand-logos" href="https://www.bontempi.it/it_fr/" target="_blank"><img class="img-brands-logos bg-black" src="assets/img/logo-black/bontempi.png" alt="logo-bontempi" /></a>
                                 <p class="mb-0 text-white-50">L’entreprise familiale Italienne se distingue par une recherche obsessionnelle de la qualité guidée par la passion.
                                     Elle offre une gamme complète pour l’habitat et des solutions pour le secteur contract alliant beauté, fonctionnalité et confort.</p>
                                 <hr class="d-none d-lg-block mb-0 ms-0" />
@@ -116,12 +116,12 @@
             </div>
             <!-- Project Three Row-->
             <div class="row gx-0 justify-content-center">
-                <div class="col-lg-6 parent-brand"><img class="img-brands" src="assets/img/bivaq-photo.jpg" alt="Bivaq" /></div>
+                <div class="col-lg-6 parent-brand"><img class="img-brands" src="assets/img/bivaq-photo.jpg" alt="Bivaq" style="object-position: left top ; width: 100%"/></div>
                 <div class="col-lg-6 order-lg-first">
                     <div class="bg-black text-center h-100 project">
                         <div class="d-flex h-100">
                             <div class="project-text w-100 my-auto text-center text-lg-right">
-                                <a class="brand-logos" href="https://www.bontempi.it/it_fr/" target="_blank"><img class="img-brands-logos" src="assets/img/logo-black/bivaq.png" alt="logo-bivaq"  /></a>
+                                <a class="brand-logos" href="https://www.bontempi.it/it_fr/" target="_blank"><img class="img-brands-logos" src="assets/img/logo-black/bivaq.png" alt="logo-bivaq" /></a>
                                 <p class="mb-0 text-white-50">Les collections outdoor Bivaq respectent les plus haut critères de qualité et de confort, dans l’esprit des extérieurs méditerranéens. La marque Barcelonaise développe son activité à la fois sur le marché résidentiel, du contract et de l'hôtellerie, en réalisant des projets avec ses propres conceptions ou des propositions sur mesure.</p>
                                 <hr class="d-none d-lg-block mb-0 ms-0" />
                             </div>
@@ -221,7 +221,7 @@
         </div>
     </section> -->
     <!-- Contact-->
-    <section class="contact-section bg-black">
+    <section class="contact-section bg-black" id="contact">
         <div class="container px-4 px-lg-5">
             <div class="row gx-4 gx-lg-5">
                 <div class="col-md-4 mb-3 mb-md-0">
@@ -240,7 +240,7 @@
                             <i class="fas fa-envelope text-primary mb-2"></i>
                             <h4 class="text-uppercase m-0">Email</h4>
                             <hr class="my-4 mx-auto" />
-                            <div class="text-black-60"><a href="#!">3ddesign@wanadoo.fr</a>
+                            <div class="text-black-60"><a href="mailto:3ddesign@wanadoo.fr">3ddesign@wanadoo.fr</a>
                             </div>
                         </div>
                     </div>
@@ -257,9 +257,9 @@
                 </div>
             </div>
             <div class="social d-flex justify-content-center">
-                <a class="mx-4" href="https://www.instagram.com/3ddesigndiffusion/?hl=fr"><i class="fab fa-instagram fa-3x"></i></a>
-                <a class="mx-4" href="https://www.pinterest.fr/3DDESIGNDIFFUSION/"><i class="fab fa-pinterest fa-3x"></i></a>
-                <a class="mx-4" href="www.linkedin.com/company/3d-design-diffusion/"><i class="fab fa-linkedin fa-3x"></i></a>
+                <a class="mx-4" href="https://www.instagram.com/3ddesigndiffusion/?hl=fr" target="_blank"><i class="fab fa-instagram fa-3x"></i></a>
+                <a class="mx-4" href="https://www.pinterest.fr/3DDESIGNDIFFUSION/" target="_blank"><i class="fab fa-pinterest fa-3x"></i></a>
+                <a class="mx-4" href="https://www.linkedin.com/company/3d-design-diffusion/" target="_blank"><i class="fab fa-linkedin fa-3x"></i></a>
 
             </div>
         </div>
