--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div class="col-lg-6">
                     <!-- <h2 class="text-white mb-4">3D Design: Décoration & Diffusion</h2> -->
                     <p class="text-white-50 mb-4">
-                        Notre société familiale est née en 1992 de la passion de Gérard Gateau pour le design et la décoration intérieure.<br><br>
+                        Notre société familiale est née en 1992 de la passion de Gérard Gateau pour le design et la décoration d'intérieur.<br><br>
                         Depuis, l’agence commerciale s’est développée et structurée au niveau national. Elle propose une sélection globale et complémentaire de marques de mobilier contemporain.<br><br>
                         Notre équipe vous accompagne dans tous vos projets et vous offre des solutions d’aménagement dans les secteurs de l’habitat, du contract et de l’hôtellerie-restauration.<br><br>
                     </p>
