--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     <div class="bg-black text-center h-100 project">
                         <div class="d-flex h-100">
                             <div class="project-text w-100 my-auto text-center text-lg-right">
-                                <a class="brand-logos" href="https://www.bontempi.it/it_fr/" target="_blank"><img class="img-brands-logos" src="assets/img/logo-black/bivaq.png" alt="logo-bivaq" /></a>
+                                <a class="brand-logos" href="https://www.bivaq.com/" target="_blank"><img class="img-brands-logos" src="assets/img/logo-black/bivaq.png" alt="logo-bivaq" /></a>
                                 <p class="mb-0 text-white-50">Les collections outdoor Bivaq respectent les plus haut critères de qualité et de confort, dans l’esprit des extérieurs méditerranéens. La marque Barcelonaise développe son activité à la fois sur le marché résidentiel, du contract et de l'hôtellerie, en réalisant des projets avec ses propres conceptions ou des propositions sur mesure.</p>
                                 <hr class="d-none d-lg-block mb-0 ms-0" />
                             </div>
