--- a/index.html
+++ b/index.html
@@ -101,14 +101,14 @@
             </div>
             <!-- Project Two Row-->
             <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
-                <div class="col-lg-6 parent-brand"><img class="img-brands" src="assets/img/bontempi-photo.png" alt="Bontempi" /></div>
+                <div class="col-lg-6 parent-brand"><img class="img-brands" src="assets/img/quinti-photo.png" alt="Quinti" /></div>
                 <div class="col-lg-6">
                     <div class="bg-black text-center h-100 project">
                         <div class="d-flex h-100" >
                             <div class="project-text w-100 my-auto text-center text-lg-left" >
-                                <a class="brand-logos" href="https://www.bontempi.it/it_fr/" target="_blank"><img class="img-brands-logos bg-black" src="assets/img/logo-black/bontempi.png" alt="logo-bontempi" /></a>
-                                <p class="mb-0 text-white-50">L’entreprise familiale Italienne se distingue par une recherche obsessionnelle de la qualité guidée par la passion.
-                                    Elle offre une gamme complète pour l’habitat et des solutions pour le secteur contract alliant beauté, fonctionnalité et confort.</p>
+                                <a class="brand-logos" href="https://www.quinti.com/" target="_blank"><img class="img-brands-logos bg-black" src="assets/img/logo-black/quinti.png" alt="logo-quinti" /></a>
+                                <p class="mb-0 text-white-50">Quinti est une marque italienne, fabriquée à 100% à Arezzo, au coeur de la Toscane.
+                                    Elle est spécialisée dans l'assise et les accessoires pour les espaces d'entreprise, la collectivité, l'hôtellerie et la restauration.</p>
                                 <hr class="d-none d-lg-block mb-0 ms-0" />
                             </div>
                         </div>
@@ -138,7 +138,7 @@
                         <div class="d-flex h-100">
                             <div class="project-text w-100 my-auto text-center text-lg-left">
                                 <a class="brand-logos" href="https://www.rosconi.com/fr/" target="_blank"><img class="img-brands-logos" src="assets/img//logo-black/rosconi.png" alt="logo-rosconi"  /></a>
-                                <p class="mb-0 text-white-50">Rosconi – L’experte en solutions globales d'aménagement d'espaces publics et d'environnements de travail. Le mobilier Rosconi combine design sobre et élégant avec un très haut niveau de fonctionnalité.</p>
+                                <p class="mb-0 text-white-50">Rosconi est une marque allemande spécialisée dans le mobilier pour les collectivités, les espaces d’entreprises et les établissements de santé. Elle combine un design sobre et élégant avec un très haut niveau de fonctionnalité.</p>
                                 <hr class="d-none d-lg-block mb-0 ms-0" />
                             </div>
                         </div>
@@ -155,21 +155,6 @@
                                 <a class="brand-logos" href="https://www.arlex.es/fr/" target="_blank"><img class="img-brands-logos" src="assets/img//logo-black/arlex.png" alt="logo-arlex" /></a>
                                 <p class="mb-0 text-white-50">A la fois performante sur sa gamme standard et les solutions sur mesure, Arlex prend soin de vos espaces de vie et de couchage en accordant une attention particulière aux matières premières et à la fabrication.</p>
                                 <hr class="d-none d-lg-block mb-0 ms-0" />
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- Project Six Row-->
-            <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
-                <div class="col-lg-6 parent-brand"><img class="img-brands" src="assets/img/ingenia-photo.png" alt="Ingenia" /></div>
-                <div class="col-lg-6 ">
-                    <div class="bg-black text-center h-100 project">
-                        <div class="d-flex h-100">
-                            <div class="project-text w-100 my-auto text-center text-lg-left">
-                                <a class="brand-logos" href="https://www.bontempi.it/ingenia/" target="_blank" ><img class="img-brands-logos" src="assets/img//logo-black/ingenia.png" alt="logo-ingenia"  /></a>
-                                <p class="mb-0 text-white-50">Ingenia  hérite de l'expérience, de la qualité des produits et des processus du groupe italien Bontempi Casa. Une gamme jeune et fonctionnelle « made in Italy » conçue pour une utilisation indoor ou outdoor.</p>
-                                <hr class="d-none d-lg-block mb-0 me-0" />
                             </div>
                         </div>
                     </div>
